<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExercitiu">

    <EditText
        android:id="@+id/etDenumire"
        android:hint="@string/denumire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etNrCalorii"
        android:hint="@string/nr_calorii"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDenumire"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tvAlegeGen"
        android:text="@string/bifeaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNrCalorii"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/cbGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gen_feminin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNrCalorii"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/tipSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbGen"
        app:layout_constraintEnd_toEndOf="parent"/>

    <DatePicker
        android:id="@+id/dpData"
        android:layout_width="275dp"
        android:layout_height="304dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipSpinner" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/adauga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dpData" />


</androidx.constraintlayout.widget.ConstraintLayout>